# bbq-buas-datascience-ai

./: .gitignore  README.md  get-menu.sh
menu/: dishes.yaml  menu.md
python/: pyproject.toml
python/src/buas_data/: menu_image_gen.py  print_menu.py
